deploy: bc9922469e0d20ea5165cca3dbebd11e6890a552

--- a/dorood/index.html
+++ b/dorood/index.html
@@ -259,7 +259,7 @@
 <p>خوش اومدید به بلاگ بنده</p>
 <p>اینجا سعی میکنم هر چند وقت یه بار یه آموزشی خبری چیزی بذارم</p>
 <p>ولی متاسفانه الان که دارم این پست رو مینویسم ساعت 12:09 شبه و پس فردا امتحان دارم :D</p>
-<p>ولی نگران نباشید <a href="https://ble.ir/devhub">اینجا</a> رو داشته باشید من رو دارید</p>
+<p>ولی نگران نباشید <a href="https://ble.ir/devhub">اینجا</a> (کانال خودمون) رو داشته باشید من رو دارید</p>
 <p>فعلا خدانگهدار!</p>
 </section>
 
