deploy: 1a276095fb88a2454fb8846dbbeeda46274ce88e

--- a/after-olom-exam/index.html
+++ b/after-olom-exam/index.html
@@ -7,7 +7,7 @@
 
   <!-- Title -->
   <title>
-    بازگشت از امتحان علوم - وبلاگ رسمی علی صفامنش
+    زنده ماندم - وبلاگ رسمی علی صفامنش
   </title>
 
   <!-- Meta -->
@@ -25,13 +25,13 @@
   <!---->
   
   <!---->
-  <meta name="description" content="زنده موندم :)" />
+  <meta name="description" content="امتحان علوم رو دادم و زنده ماندم و نمردم!" />
   <meta name="author" content="علی صفامنش" />
   <!-- The Open Graph protocol -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="بازگشت از امتحان علوم" />
+  <meta property="og:title" content="زنده ماندم" />
   <meta property="og:site_name" content="وبلاگ رسمی علی صفامنش" />
-  <meta property="og:description" content="زنده موندم :)" />
+  <meta property="og:description" content="امتحان علوم رو دادم و زنده ماندم و نمردم!" />
   <meta property="og:url" content="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;after-olom-exam&#x2F;" />
   
   <!---->
@@ -228,7 +228,7 @@
   
 
   <header class="mb-16">
-    <h1 class="!my-0 pb-2.5">بازگشت از امتحان علوم</h1>
+    <h1 class="!my-0 pb-2.5">زنده ماندم</h1>
     <div class="text-sm antialiased opacity-60">
   
   <time>1404-02-28</time>
@@ -256,8 +256,9 @@
 
   <!-- Content -->
   <section><p>سلام سلام</p>
-<p>آقا امتحان علومو دادم و تموم شد، توی این فاصله یه پروژه جدید زدم (searchpls)[https://github.com/daradege/searchpls] که سادست ولی باعث شد حوصلم سر نره</p>
-<p>همین پست هم داره از سمت پروژه جدیدم توی سایت آپلود میشه :)</p>
+<p>آقا امتحان علومو دادم و تموم شد، توی این فاصله یه پروژه جدید زدم <a href="https://github.com/daradege/searchpls">searchpls</a> که سادست ولی باعث شد حوصلم سر نره</p>
+<p>همین پست هم داره از سمت پروژه جدیدم توی سایت آپلود میشه :)
+بریم به پیشواز امتحان قرآن :D</p>
 </section>
 
   <hr />
