--- a/404.html
+++ b/404.html
@@ -23,15 +23,15 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="وبلاگ رسمی علی صفامنش" />
   <meta property="og:description" content="اینجا هر از چندگاهی، یه مطلب آموزشی یا یه خبر جالب رو می‌ذارم." />
-  <meta property="og:url" content="https://daradege.ir/blog" />
+  <meta property="og:url" content="https://daradege.github.io/blog" />
   
-  <meta property="og:image" content="https://daradege.ir/blog/icons/github.svg" />
+  <meta property="og:image" content="https://daradege.github.io/blog/icons/github.svg" />
   
   <!---->
   
 
   <!-- CSS & JS -->
-  <link rel="preload stylesheet" as="style" href="https://daradege.ir/blog/main.css" />
+  <link rel="preload stylesheet" as="style" href="https://daradege.github.io/blog/main.css" />
   <style>
     :root {
       --bg: #f4f4f5;
@@ -50,7 +50,7 @@
   
 
   <!-- Dark Icon -->
-  <link rel="preload" as="image" href="https://daradege.ir/blog/icons/theme.svg" />
+  <link rel="preload" as="image" href="https://daradege.github.io/blog/icons/theme.svg" />
 
   <!-- Math -->
   
@@ -61,15 +61,15 @@
   <!---->
 
   <!-- Favicon -->
-  <link rel="icon" href="https://daradege.ir/blog/favicon.ico" />
-  <link rel="apple-touch-icon" href="https://daradege.ir/blog/apple-touch-icon.png" />
+  <link rel="icon" href="https://daradege.github.io/blog/favicon.ico" />
+  <link rel="apple-touch-icon" href="https://daradege.github.io/blog/apple-touch-icon.png" />
 
   <!-- Feeds -->
   
 
   <!-- Canonical -->
-  <link rel="stylesheet" href="https://daradege.ir/blog/custom.css">
-  <link rel="canonical" href="https:&#x2F;&#x2F;daradege.ir&#x2F;blog" />
+  <link rel="stylesheet" href="https://daradege.github.io/blog/custom.css">
+  <link rel="canonical" href="https:&#x2F;&#x2F;daradege.github.io&#x2F;blog" />
   <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
   <style>
     @font-face {
@@ -99,7 +99,7 @@
           role="button"
           aria-label="Dark"
         ></div>&nbsp;
-        <a class="text-2xl font-semibold" href="https://daradege.ir/blog">وبلاگ رسمی علی صفامنش</a>
+        <a class="text-2xl font-semibold" href="https://daradege.github.io/blog">وبلاگ رسمی علی صفامنش</a>
       </div>
       
       <div
@@ -163,7 +163,7 @@
         <li>
           <a
             class="primary-link block py-2 text-center text-lg font-medium lg:px-3 lg:py-0"
-            href="https://daradege.ir/blog/projects"
+            href="https://daradege.github.io/blog/projects"
             >پروژه‌ها</a
           >
         </li>
@@ -171,7 +171,7 @@
         <li>
           <a
             class="primary-link block py-2 text-center text-lg font-medium lg:px-3 lg:py-0"
-            href="https://daradege.ir/blog/archive"
+            href="https://daradege.github.io/blog/archive"
             >آرشیو</a
           >
         </li>
@@ -179,7 +179,7 @@
         <li>
           <a
             class="primary-link block py-2 text-center text-lg font-medium lg:px-3 lg:py-0"
-            href="https://daradege.ir/blog/tags"
+            href="https://daradege.github.io/blog/tags"
             >تگ‌ها</a
           >
         </li>
@@ -187,7 +187,7 @@
         <li>
           <a
             class="primary-link block py-2 text-center text-lg font-medium lg:px-3 lg:py-0"
-            href="https://daradege.ir/blog/about"
+            href="https://daradege.github.io/blog/about"
             >درباره</a
           >
         </li>
@@ -218,7 +218,7 @@
     <!---->
     &copy; 2025<!---->
     
-    <a class="link" href="https://daradege.ir/blog">
+    <a class="link" href="https://daradege.github.io/blog">
       علی صفامنش
     </a>
      |<!---->
