--- a/projects/index.html
+++ b/projects/index.html
@@ -32,7 +32,7 @@
   <meta property="og:title" content="پروژه‌ها" />
   <meta property="og:site_name" content="وبلاگ رسمی علی صفامنش" />
   <meta property="og:description" content="پروژه‌ها" />
-  <meta property="og:url" content="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;projects&#x2F;" />
+  <meta property="og:url" content="https:&#x2F;&#x2F;daradege.github.io&#x2F;blog&#x2F;projects&#x2F;" />
   
   <!---->
   
@@ -40,13 +40,13 @@
   
   <!---->
   
-  <meta property="og:image" content="https://daradege.ir/blog/icons/github.svg" />
+  <meta property="og:image" content="https://daradege.github.io/blog/icons/github.svg" />
   
   <!---->
   
 
   <!-- CSS & JS -->
-  <link rel="preload stylesheet" as="style" href="https://daradege.ir/blog/main.css" />
+  <link rel="preload stylesheet" as="style" href="https://daradege.github.io/blog/main.css" />
   <style>
     :root {
       --bg: #f4f4f5;
@@ -65,7 +65,7 @@
   
 
   <!-- Dark Icon -->
-  <link rel="preload" as="image" href="https://daradege.ir/blog/icons/theme.svg" />
+  <link rel="preload" as="image" href="https://daradege.github.io/blog/icons/theme.svg" />
 
   <!-- Math -->
   
@@ -76,15 +76,15 @@
   <!---->
 
   <!-- Favicon -->
-  <link rel="icon" href="https://daradege.ir/blog/favicon.ico" />
-  <link rel="apple-touch-icon" href="https://daradege.ir/blog/apple-touch-icon.png" />
+  <link rel="icon" href="https://daradege.github.io/blog/favicon.ico" />
+  <link rel="apple-touch-icon" href="https://daradege.github.io/blog/apple-touch-icon.png" />
 
   <!-- Feeds -->
   
 
   <!-- Canonical -->
-  <link rel="stylesheet" href="https://daradege.ir/blog/custom.css">
-  <link rel="canonical" href="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;projects&#x2F;" />
+  <link rel="stylesheet" href="https://daradege.github.io/blog/custom.css">
+  <link rel="canonical" href="https:&#x2F;&#x2F;daradege.github.io&#x2F;blog&#x2F;projects&#x2F;" />
   <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
   <style>
     @font-face {
@@ -114,7 +114,7 @@
           role="button"
           aria-label="Dark"
         ></div>&nbsp;
-        <a class="text-2xl font-semibold" href="https://daradege.ir/blog">وبلاگ رسمی علی صفامنش</a>
+        <a class="text-2xl font-semibold" href="https://daradege.github.io/blog">وبلاگ رسمی علی صفامنش</a>
       </div>
       
       <div
@@ -178,7 +178,7 @@
         <li>
           <a
             class="primary-link block py-2 text-center text-lg font-medium lg:px-3 lg:py-0"
-            href="https://daradege.ir/blog/projects"
+            href="https://daradege.github.io/blog/projects"
             >پروژه‌ها</a
           >
         </li>
@@ -186,7 +186,7 @@
         <li>
           <a
             class="primary-link block py-2 text-center text-lg font-medium lg:px-3 lg:py-0"
-            href="https://daradege.ir/blog/archive"
+            href="https://daradege.github.io/blog/archive"
             >آرشیو</a
           >
         </li>
@@ -194,7 +194,7 @@
         <li>
           <a
             class="primary-link block py-2 text-center text-lg font-medium lg:px-3 lg:py-0"
-            href="https://daradege.ir/blog/tags"
+            href="https://daradege.github.io/blog/tags"
             >تگ‌ها</a
           >
         </li>
@@ -202,7 +202,7 @@
         <li>
           <a
             class="primary-link block py-2 text-center text-lg font-medium lg:px-3 lg:py-0"
-            href="https://daradege.ir/blog/about"
+            href="https://daradege.github.io/blog/about"
             >درباره</a
           >
         </li>
@@ -399,7 +399,7 @@
     <!---->
     &copy; 2025<!---->
     
-    <a class="link" href="https://daradege.ir/blog">
+    <a class="link" href="https://daradege.github.io/blog">
       علی صفامنش
     </a>
      |<!---->
