deploy: 095616f822ae70705a02d88105a81b4dd79ad66c

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   
   <!-- Avatar -->
   
-  <link rel="preload" as="image" href="https://daradege.ir/blog/https://daradege.ir/blog/icons/logo.png" />
+  <link rel="preload" as="image" href="https://daradege.ir/blog/icons/logo.png" />
   
 
   <!-- Social List -->
@@ -238,7 +238,7 @@
   >
     <img
       class=" my-0 aspect-square w-16 rounded-full !bg-black/5 hover:animate-spin"
-      src="https://daradege.ir/blog/https://daradege.ir/blog/icons/logo.png"
+      src="https://daradege.ir/blog/icons/logo.png"
       alt="وبلاگ رسمی علی صفامنش"
     />
   </div>
