--- a/index.html
+++ b/index.html
@@ -325,6 +325,40 @@
 >
   <!---->
 
+  <h2 class="!my-0 pb-1 font-bold !leading-none">خداحافظ بله!</h2>
+
+  <div class="not-prose my-1 truncate">
+    
+    <p>از بله رفتم! چرا؟ به کجا؟ اینجا توضیح میدم</p>
+    
+  </div>
+
+  <div class="text-sm antialiased opacity-60">
+  
+  <time>2025-07-29</time>
+  <span class="mx-1">&middot;</span>
+  <span>2 دقیقه</span>
+  <!---->
+  <!---->
+  <!---->
+  <!---->
+  
+  <span class="mx-1">&middot;</span>
+  <span>علی صفامنش</span>
+  
+  <!-- Page Info inject -->
+  
+</div>
+
+
+  <a class="absolute inset-0 text-[0]" href="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;khdhfz-blh&#x2F;">خداحافظ بله!</a>
+</section>
+
+<section
+  class="block-bg relative mb-4 rounded-lg p-4 first-of-type:mt-0 last-of-type:mb-0 active:scale-95 lg:mb-6 lg:p-6"
+>
+  <!---->
+
   <h2 class="!my-0 pb-1 font-bold !leading-none">امتحانا تموم شد!</h2>
 
   <div class="not-prose my-1 truncate">
