deploy: 44e634db2dc3e5132a4cba0c1ff2fe21c8b00d49

--- a/khdhfz-blh/index.html
+++ b/khdhfz-blh/index.html
@@ -303,7 +303,7 @@
 <h2 id="wl-khh-fhmydm-blh-sltn-mnyth">اولا که فهمیدم بله سلطان امنیته!</h2>
 <p>یکی از دوستان یه حرکتی زده بود، و یه دیتابیسی جمع کرده بود از شماره های بله (نمیدونم چجوری ولی احتمال میدم با آزمون و خطا)</p>
 <p>و ایشون یه برنامه ای نوشته بود و توی گیت هاب منتشر کرده بود و این api رو توش استفاده کرده بود و کامیت کرده بود، ولی بعدش فهمیده بود و کامیت های جدید زده بود</p>
-<p>اما دریغ از این که گیت هاب هیستوری داره و من هم اینو در آوردم</p>
+<p>اما دریغ از این که گیت هاب هیستوری داره و رفیق من هم اینو در آورد و بهم داد</p>
 <p>و بله! شماره من هم توشون پیدا شد!</p>
 <p>و فهمیدم که دیگه نباید تو بله بمونم، به جاش چند تا از رفیقامو بردم ماتریکس و تلگرام.</p>
 <h2 id="dwm-hm-blh-byshtryn-hjm-trwl-h-rw-twy-yrn-drh-b-d-z-rwbykh">دوما هم بله بیشترین حجم ترول ها رو توی ایران داره (بعد از روبیکا)</h2>
