--- a/khdhfz-blh/index.html
+++ b/khdhfz-blh/index.html
@@ -360,6 +360,12 @@
   
 <nav class="block-bg mt-12 flex flex-wrap rounded-lg text-lg">
   
+  <a
+    class="block-hover-mask ml-auto flex min-w-[50%] grow items-center justify-end rounded-r-md p-6 pl-3 font-semibold no-underline"
+    href="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;gwgl-qtl-mhrbwn&#x2F;"
+    ><span class="ml-1.5">→&nbsp;&nbsp;</span><span>گوگل، قاتل مهربون!</span></a
+  >
+  
   
   <a
     class="block-hover-mask flex min-w-[50%] grow items-center rounded-l-md p-6 pr-3 font-semibold no-underline"
