--- a/khdhfz-blh/index.html
+++ b/khdhfz-blh/index.html
@@ -369,8 +369,8 @@
   
   <a
     class="block-hover-mask flex min-w-[50%] grow items-center rounded-l-md p-6 pr-3 font-semibold no-underline"
-    href="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;mthn-tmwm-shd&#x2F;"
-    ><span>امتحانا تموم شد!</span><span class="mr-1.5">&nbsp;&nbsp;←</span></a
+    href="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;after-olom-exam&#x2F;"
+    ><span>زنده ماندم</span><span class="mr-1.5">&nbsp;&nbsp;←</span></a
   >
   <!---->
   
