--- a/dorood/index.html
+++ b/dorood/index.html
@@ -318,8 +318,8 @@
   
   <a
     class="block-hover-mask ml-auto flex min-w-[50%] grow items-center justify-end rounded-r-md p-6 pl-3 font-semibold no-underline"
-    href="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;after-olom-exam&#x2F;"
-    ><span class="ml-1.5">→&nbsp;&nbsp;</span><span>زنده ماندم</span></a
+    href="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;khdhfz-blh&#x2F;"
+    ><span class="ml-1.5">→&nbsp;&nbsp;</span><span>خداحافظ بله!</span></a
   >
   
   <!---->
