--- a/khdhfz-blh/index.html
+++ b/khdhfz-blh/index.html
@@ -370,7 +370,7 @@
   <a
     class="block-hover-mask flex min-w-[50%] grow items-center rounded-l-md p-6 pr-3 font-semibold no-underline"
     href="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;dorood&#x2F;"
-    ><span>آغاز بلاگ، پایان مدرسه</span><span class="mr-1.5">&nbsp;&nbsp;←</span></a
+    ><span>آغاز بلاگ</span><span class="mr-1.5">&nbsp;&nbsp;←</span></a
   >
   <!---->
   
