--- a/tajrobe-linux/index.html
+++ b/tajrobe-linux/index.html
@@ -231,7 +231,7 @@
     <h1 class="!my-0 pb-2.5">تعویض دیسترو به کجا رسید؟</h1>
     <div class="text-sm antialiased opacity-60">
   
-  <time>1404-02-29</time>
+  <time>1404-05-29</time>
   <span class="mx-1">&middot;</span>
   <span>4 دقیقه</span>
   <!---->
@@ -532,17 +532,11 @@
   
 <nav class="block-bg mt-12 flex flex-wrap rounded-lg text-lg">
   
-  <a
-    class="block-hover-mask ml-auto flex min-w-[50%] grow items-center justify-end rounded-r-md p-6 pl-3 font-semibold no-underline"
-    href="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;khdhfz-blh&#x2F;"
-    ><span class="ml-1.5">→&nbsp;&nbsp;</span><span>خداحافظ بله!</span></a
-  >
-  
   
   <a
     class="block-hover-mask flex min-w-[50%] grow items-center rounded-l-md p-6 pr-3 font-semibold no-underline"
-    href="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;dorood&#x2F;"
-    ><span>آغاز بلاگ</span><span class="mr-1.5">&nbsp;&nbsp;←</span></a
+    href="https:&#x2F;&#x2F;daradege.ir&#x2F;blog&#x2F;free-vps&#x2F;"
+    ><span>اگه vps رایگان میخوای این مطلب رو بخون</span><span class="mr-1.5">&nbsp;&nbsp;←</span></a
   >
   <!---->
   
